SEGFAULT: OCIO configuration typo leads to segfault #50122

Closed
opened 2016-11-27 00:12:32 +01:00 by Troy Sobotka · 6 comments

System Information
Debian Stretch, current

Blender Version
Broken: 371d357

Short description of error
Segfault with typo OCIO configuration.

"OpenColorIO Error: DisplayTransform error. InputColorSpaceName is unspecified."

**System Information** Debian Stretch, current **Blender Version** Broken: 371d357 **Short description of error** Segfault with typo OCIO configuration. "OpenColorIO Error: DisplayTransform error. InputColorSpaceName is unspecified."
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @troy_s

Added subscriber: @troy_s

Added subscriber: @RainerTrummer

Added subscriber: @RainerTrummer
Sergey Sharybin self-assigned this 2016-11-30 19:16:20 +01:00

Please be more specific which exact typo causes crash. Or even better, attach the whole config which demonstrates the issue.

Please be more specific which exact typo causes crash. Or even better, attach the whole config which demonstrates the issue.

This issue was referenced by 1b9cae9d04

This issue was referenced by 1b9cae9d04c222d1ce8dc05abbd5692c30fe3e57

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#50122
No description provided.