Fix T50122: SEGFAULT: OCIO configuration typo leads to segfault